# UDTSimple

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/src/: client.cpp  client.h  clientNetwork.cpp  main.cpp
network/: network.h
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp  server.h  serverNetwork.cpp
